# tritone-rotations

./: .gitignore  LICENSE.txt  README.md  TODO.txt  build.sh  main.py  pyproject.toml
.github/workflows/: python-publish.yml
tritone_rotations/: cli.py
