[project]
name = "tritone-rotations"
version = "0.1.0"
description = "A little cli tool for testing permutations of transformations to the diminished seventh chord."
authors = [{ name = "Kyle Dickerson", email = "kyledickersoncomposer@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.0",
    "music21>=9.3.0",
    "numpy>=2.2.2",
]
