[project]
name = "tritone-rotations"
version = "0.1.7"
description = "A cli tool for testing the permutations of diminished seventh chord transformations."
authors = [{ name = "Kyle Dickerson", email = "kyledickersoncomposer@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.0",
    "music21>=9.3.0",
    "numpy>=2.2.2",
]

[project.scripts]
tritone-rotations = "tritone_rotations.cli:main"
